--- a/Frontend/E-Commerce Site/src/components/RelatedProducts/relatedproduct.css
+++ b/Frontend/E-Commerce Site/src/components/RelatedProducts/relatedproduct.css
@@ -1,24 +1,26 @@
-.popular{
+.relatedproducts{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
     height: 90vh;
 }
-.popular h1{
-    color: #171717;
+
+.relatedproducts h1{
     font-size: 50px;
     font-weight: 600;
+    color: #171717;
 }
-.popular hr{
+
+.relatedproducts hr{
     width: 200px;
     height: 6px;
     border-radius: 10px;
     background: #252525;
 }
-.popular-item{
+
+.relatedproducts-item{
     margin-top: 50px;
     display: flex;
-    gap:30px;
-    /* flex-wrap: wrap; */
+    gap: 30px;
 }
